Bug 552764 - [14] JEP 361 - Switch Expressions Standard - Change Error Codes
Change-Id: I603f1c28ffb28c7da5b7b1f1bf9f40e498a3d7d6
Signed-off-by: Manoj Palat <manpalat@in.ibm.com>