@@ -30,7 +30,7 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 	static {
 //		TESTS_NUMBERS = new int [] { 40 };
 //		TESTS_RANGE = new int[] { 1, -1 };
-//		TESTS_NAMES = new String[] { "testBug547891_03" };
+//		TESTS_NAMES = new String[] { "testBug552764" };
 	}
 	
 	public static Class<?> testClass() {
@@ -44,7 +44,7 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 	}
 
 	// Enables the tests to run individually
-	protected Map<String, String> getCompilerOptions() {
+	protected Map<String, String> _getCompilerOptions() {
 		Map<String, String> defaultOptions = super.getCompilerOptions();
 		defaultOptions.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_14);
 		defaultOptions.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_14);
@@ -323,7 +323,8 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 				},
 				"100");
 	}
-	public void testBug544073_008() {
+	// switch expressions graduated from preview to standard and hence the following test not relevant anymore
+	public void _testBug544073_008() {
 		Map<String, String> disablePreviewOptions = getCompilerOptions();
 		disablePreviewOptions.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.DISABLED);
 		String[] testFiles = new String[] {
@@ -420,18 +421,18 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 				"----------\n" + 
 				"1. ERROR in X.java (at line 4)\n" + 
 				"	case 0 -> i * 0;\n" + 
-				"	^^^^^^\n" + 
-				"Case Labels with \'->\' is a preview feature and disabled by default. Use --enable-preview to enable\n" + 
+				"	          ^^^^^\n" + 
+				"Invalid expression as statement\n" + 
 				"----------\n" + 
 				"2. ERROR in X.java (at line 5)\n" + 
 				"	case 1 -> 2;\n" + 
-				"	^^^^^^\n" + 
-				"Case Labels with \'->\' is a preview feature and disabled by default. Use --enable-preview to enable\n" + 
+				"	          ^\n" + 
+				"Invalid expression as statement\n" + 
 				"----------\n" + 
 				"3. ERROR in X.java (at line 6)\n" + 
 				"	default -> 3;\n" + 
-				"	^^^^^^^\n" + 
-				"Case Labels with \'->\' is a preview feature and disabled by default. Use --enable-preview to enable\n" + 
+				"	           ^\n" + 
+				"Invalid expression as statement\n" + 
 				"----------\n";
 		this.runNegativeTest(
 				testFiles,
@@ -462,11 +463,6 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 		String expectedProblemLog =
 				"----------\n" + 
 				"1. ERROR in X.java (at line 4)\n" + 
-				"	default -> 3;\n" + 
-				"	^^^^^^^\n" + 
-				"You are using a preview language feature that may or may not be supported in a future release\n" + 
-				"----------\n" + 
-				"2. ERROR in X.java (at line 4)\n" + 
 				"	default -> 3;\n" + 
 				"	           ^\n" + 
 				"Invalid expression as statement\n" + 
@@ -2204,11 +2200,6 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 				"----------\n" + 
 				"1. WARNING in X.java (at line 5)\n" + 
 				"	case \"ABC\", (false ? (String) \"c\" : (String) \"d\") : break;\n" + 
-				"	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" + 
-				"You are using a preview language feature that may or may not be supported in a future release\n" + 
-				"----------\n" + 
-				"2. WARNING in X.java (at line 5)\n" + 
-				"	case \"ABC\", (false ? (String) \"c\" : (String) \"d\") : break;\n" + 
 				"	                     ^^^^^^^^^^^^\n" + 
 				"Dead code\n" + 
 				"----------\n";
@@ -2252,7 +2243,8 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 			},
 			message);
 	}
-	public void testBug544073_073() {
+	// multi-constant case has graduated from preview to standard - this test is no longer relevant
+	public void _testBug544073_073() {
 		if (this.complianceLevel < ClassFileConstants.JDK1_8)
 			return;
 		Map<String, String> options = getCompilerOptions();
@@ -2547,10 +2539,10 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 		};
 		String expectedProblemLog =
 				"----------\n" + 
-				"1. WARNING in X.java (at line 4)\n" + 
+				"1. ERROR in X.java (at line 4)\n" + 
 				"	yield();\n" + 
 				"	^^^^^^^\n" + 
-				"yield may be disallowed in future - qualify method calls to avoid this message\n" + 
+				"restricted identifier yield not allowed here - method calls need to be qualified\n" + 
 				"----------\n" + 
 				"2. ERROR in X.java (at line 7)\n" + 
 				"	Zork();\n" + 
@@ -2610,10 +2602,10 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 				"	^^^^^\n" + 
 				"Syntax error on token \"yield\", AssignmentOperator expected after this token\n" + 
 				"----------\n" + 
-				"2. WARNING in X.java (at line 7)\n" + 
+				"2. ERROR in X.java (at line 7)\n" + 
 				"	class yield {\n" + 
 				"	      ^^^^^\n" + 
-				"yield may be a restricted identifier in future and may be disallowed as a type name\n" + 
+				"yield is a restricted identifier and cannot be used as type name\n" + 
 				"----------\n";
 		this.runNegativeTest(
 				testFiles,
@@ -2663,20 +2655,20 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 		};
 		String expectedProblemLog =
 				"----------\n" + 
-				"1. WARNING in X.java (at line 3)\n" + 
+				"1. ERROR in X.java (at line 3)\n" + 
 				"	yield y;\n" + 
 				"	^^^^^\n" + 
-				"yield may be a restricted identifier in future and may be disallowed as a type name\n" + 
+				"yield is a restricted identifier and cannot be used as type name\n" + 
 				"----------\n" + 
 				"2. ERROR in X.java (at line 4)\n" + 
 				"	Zork();\n" + 
 				"	^^^^\n" + 
 				"The method Zork() is undefined for the type X\n" + 
 				"----------\n" + 
-				"3. WARNING in X.java (at line 7)\n" + 
+				"3. ERROR in X.java (at line 7)\n" + 
 				"	class yield {\n" + 
 				"	      ^^^^^\n" + 
-				"yield may be a restricted identifier in future and may be disallowed as a type name\n" + 
+				"yield is a restricted identifier and cannot be used as type name\n" + 
 				"----------\n";
 		this.runNegativeTest(
 				testFiles,
@@ -2726,20 +2718,20 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 		};
 		String expectedProblemLog =
 				"----------\n" + 
-				"1. WARNING in X.java (at line 3)\n" + 
+				"1. ERROR in X.java (at line 3)\n" + 
 				"	yield y = null;\n" + 
 				"	^^^^^\n" + 
-				"yield may be a restricted identifier in future and may be disallowed as a type name\n" + 
+				"yield is a restricted identifier and cannot be used as type name\n" + 
 				"----------\n" + 
 				"2. ERROR in X.java (at line 4)\n" + 
 				"	Zork();\n" + 
 				"	^^^^\n" + 
 				"The method Zork() is undefined for the type X\n" + 
 				"----------\n" + 
-				"3. WARNING in X.java (at line 7)\n" + 
+				"3. ERROR in X.java (at line 7)\n" + 
 				"	class yield {\n" + 
 				"	      ^^^^^\n" + 
-				"yield may be a restricted identifier in future and may be disallowed as a type name\n" + 
+				"yield is a restricted identifier and cannot be used as type name\n" + 
 				"----------\n";
 		this.runNegativeTest(
 				testFiles,
@@ -2786,10 +2778,10 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 				"	^^^^\n" + 
 				"The method Zork() is undefined for the type X\n" + 
 				"----------\n" + 
-				"2. WARNING in X.java (at line 6)\n" + 
+				"2. ERROR in X.java (at line 6)\n" + 
 				"	class yield {\n" + 
 				"	      ^^^^^\n" + 
-				"yield may be a restricted identifier in future and may be disallowed as a type name\n" + 
+				"yield is a restricted identifier and cannot be used as type name\n" + 
 				"----------\n";
 		this.runNegativeTest(
 				testFiles,
@@ -2839,20 +2831,20 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 		};
 		String expectedProblemLog =
 				"----------\n" + 
-				"1. WARNING in X.java (at line 3)\n" + 
+				"1. ERROR in X.java (at line 3)\n" + 
 				"	new yield();\n" + 
 				"	    ^^^^^\n" + 
-				"yield may be a restricted identifier in future and may be disallowed as a type name\n" + 
+				"yield is a restricted identifier and cannot be used as type name\n" + 
 				"----------\n" + 
 				"2. ERROR in X.java (at line 4)\n" + 
 				"	Zork();\n" + 
 				"	^^^^\n" + 
 				"The method Zork() is undefined for the type X\n" + 
 				"----------\n" + 
-				"3. WARNING in X.java (at line 7)\n" + 
+				"3. ERROR in X.java (at line 7)\n" + 
 				"	class yield {\n" + 
 				"	      ^^^^^\n" + 
-				"yield may be a restricted identifier in future and may be disallowed as a type name\n" + 
+				"yield is a restricted identifier and cannot be used as type name\n" + 
 				"----------\n";
 		this.runNegativeTest(
 				testFiles,
@@ -2902,20 +2894,20 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 		};
 		String expectedProblemLog =
 				"----------\n" + 
-				"1. WARNING in X.java (at line 3)\n" + 
+				"1. ERROR in X.java (at line 3)\n" + 
 				"	yield[] y;\n" + 
 				"	^^^^^^^\n" + 
-				"yield may be a restricted identifier in future and may be disallowed as a type name\n" + 
+				"yield is a restricted identifier and cannot be used as type name\n" + 
 				"----------\n" + 
 				"2. ERROR in X.java (at line 4)\n" + 
 				"	Zork();\n" + 
 				"	^^^^\n" + 
 				"The method Zork() is undefined for the type X\n" + 
 				"----------\n" + 
-				"3. WARNING in X.java (at line 7)\n" + 
+				"3. ERROR in X.java (at line 7)\n" + 
 				"	class yield {\n" + 
 				"	      ^^^^^\n" + 
-				"yield may be a restricted identifier in future and may be disallowed as a type name\n" + 
+				"yield is a restricted identifier and cannot be used as type name\n" + 
 				"----------\n";
 		this.runNegativeTest(
 				testFiles,
@@ -3544,5 +3536,108 @@ public class SwitchExpressionsYieldTest extends AbstractRegressionTest {
 				"}"
 			},
 			"0");
+	}
+	public void testBug552764_001() {
+		Map<String, String> options = getCompilerOptions();
+		options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_13);
+		String[] testFiles = new String[] {
+				"X.java",
+				"public class X {\n" +
+				"	static int twice(int i) {\n" +
+				"		switch (i) {\n" +
+				"			default -> 3;\n" +
+				"		}\n" +
+				"		return 0;\n" +
+				"	}\n" +
+				"	public static void main(String[] args) {\n" +
+				"		System.out.print(twice(3));\n" +
+				"	}\n" +
+				"}\n",
+		};
+
+		String expectedProblemLog =
+				"----------\n" + 
+				"1. ERROR in X.java (at line 4)\n" + 
+				"	default -> 3;\n" + 
+				"	^^^^^^^\n" + 
+				"Arrow in case statement supported from Java 14 onwards only\n" + 
+				"----------\n";
+		this.runNegativeTest(
+				testFiles,
+				expectedProblemLog,
+				null,
+				true,
+				options);
+	}
+	public void testBug552764_002() {
+		Map<String, String> options = getCompilerOptions();
+		options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_13);
+		String[] testFiles = new String[] {
+				"X.java",
+				"public class X {\n" +
+				"	static int twice(int i) {\n" +
+				"		return switch (i) {\n" +
+				"			default -> 3;\n" +
+				"		};\n" +
+				"	}\n" +
+				"	public static void main(String[] args) {\n" +
+				"		System.out.print(twice(3));\n" +
+				"	}\n" +
+				"}\n",
+		};
+
+		String expectedProblemLog =
+				"----------\n" + 
+				"1. ERROR in X.java (at line 3)\n" + 
+				"	return switch (i) {\n" + 
+				"			default -> 3;\n" + 
+				"		};\n" + 
+				"	       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" + 
+				"Switch Expressions are supported from Java 14 onwards only\n" + 
+				"----------\n" + 
+				"2. ERROR in X.java (at line 4)\n" + 
+				"	default -> 3;\n" + 
+				"	^^^^^^^\n" + 
+				"Arrow in case statement supported from Java 14 onwards only\n" + 
+				"----------\n";
+		this.runNegativeTest(
+				testFiles,
+				expectedProblemLog,
+				null,
+				true,
+				options);
+	}
+	public void testBug552764_003() {
+		Map<String, String> options = getCompilerOptions();
+		options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_13);
+		String[] testFiles = new String[] {
+				"X.java",
+				"public class X {\n" +
+				"	static int twice(int i) {\n" +
+				"		switch (i) {\n" +
+				"			case 1, 2 : break;\n" +
+				"			default : break;\n" +
+				"		}\n" +
+				"		return 0;\n" +
+				"	}\n" +
+				"	public static void main(String[] args) {\n" +
+				"		System.out.print(twice(3));\n" +
+				"	}\n" +
+				"}\n",
+		};
+
+		String expectedProblemLog =
+				"----------\n" + 
+				"1. ERROR in X.java (at line 4)\n" + 
+				"	case 1, 2 : break;\n" + 
+				"	^^^^^^^^^\n" + 
+				"Multi-constant case labels supported from Java 14 onwards only\n" + 
+				"----------\n";
+		this.runNegativeTest(
+				testFiles,
+				expectedProblemLog,
+				null,
+				true,
+				options);
 	}
 }
